@@ -2,6 +2,7 @@
 Version: 1.2.14
 Date: ????
   Changes:
+    - If the 'type = "nothing"' effect is removed from a given cargo drops technology, PlanetsLib will no longer enforce that this technology must be researched to perform cargo drops.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.13
 Date: 2025-03-12
